# DIRKU

./: .gitignore  LICENSE.txt  README.md
src/: pyproject.toml  requirements.yml  setup.py
src/dirku.egg-info/: PKG-INFO  SOURCES.txt
src/dirku/collisionDetection/: collisionDetection.py  selfcollisionDetection.py
src/dirku/dirku.egg-info/: SOURCES.txt  top_level.txt
src/dirku/optimization/: ADMM.py  optim_gradientDescentBacktracking.py
src/dirku/postprocessing/: measure_dice.py  measure_intersection.py  measure_jacobian.py  measure_selfintersection.py  postprocessing_utils.py  visual_pullback.py  visual_vector.py
src/dirku/regularization/: regularization_svk.py
src/dirku/similarityMeasure/: similarityMeasure.py
src/dirku/utils/: points.py  sdf.py
src/syntheticData/intersection2D/: fixed.npy
src/syntheticData/intersection2D/results/: class_transformation_nonrigid_segment_1_scale_tensor([1., 1.]).pkl  class_transformation_nonrigid_segment_1_scale_tensor([10., 10.]).pkl  class_transformation_nonrigid_segment_1_scale_tensor([5., 5.]).pkl  class_transformation_nonrigid_segment_2_scale_tensor([1., 1.]).pkl  class_transformation_nonrigid_segment_2_scale_tensor([10., 10.]).pkl  class_transformation_nonrigid_segment_2_scale_tensor([5., 5.]).pkl  transformation_nonrigid_segment_1_scale_tensor([1., 1.]).json  transformation_nonrigid_segment_1_scale_tensor([1., 1.]).npy  transformation_nonrigid_segment_1_scale_tensor([10., 10.]).json  (+9 more)
src/syntheticData/selfintersection2D/: fixed.npy  moving_mask.npy
src/tests/: test_intersection2D.py  test_selfintersection2D.py
(+51 files in other folders)
