
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirku"
version = "1.0.0"
description = "Deformable image registration framework."
readme = "README.md"
authors = [
  {name = "Thomas Alscher", email = "alscher@di.ku.dk"}
]

[project.urls]
homepage = "https://github.com/ThomasAlscher1991/DIRKU"